--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python = "^3.7"
 python-gettext = "^4.0"
 wxPython = "^4.1.1"
 matplotlib = "^3.5.2"
+psutil = "^5.9.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
